For the most part - I think the app is running, as it was in the other project

--- a/src/client/app/home/home.component.html
+++ b/src/client/app/home/home.component.html
@@ -1,10 +1,13 @@
-<p>Howdy! Here's a list of awesome computer scientists. Do you know any others? Add to the list yourself.</p>
-
-<form (submit)="addName()">
-  <input [(ngModel)]="newName" name="newName" placeholder="Awesome Computer Scientist">
-  <button type="submit">Add</button>
-</form>
-
-<ul>
-  <li *ngFor="let name of names">{{ name }}</li>
-</ul>
+<div style="text-align:center" class="container">
+  <div class="row">
+    <div class="col-sm">
+      <h1>
+        Welcome to {{ title }}!
+      </h1>
+    </div>
+    <div class="col-sm">
+      <img width="100" alt="LIV Volleyball Logo" src="../../assets/favicon/favicon.ico">
+    </div>
+  </div>
+</div>
+<vb-brackets></vb-brackets>
