NON WORKING SAVE - fix sequelize importer not being found

--- a/src/client/app/cell/cell.component.html
+++ b/src/client/app/cell/cell.component.html
@@ -1,4 +1,4 @@
 
 <div [title] = "position" (click) = "onClick()">
-  <span *ngIf="class == 'n' || class == 'u'">Team: <b>{{ team.name }}</b></span>
+  <span *ngIf="class == 'n' || class == 'u'">TeamService: <b>{{ team.TeamName }}</b></span>
 </div>
