Client portion of DBConnect Merged into master

--- a/src/client/app/brackets/brackets.component.html
+++ b/src/client/app/brackets/brackets.component.html
@@ -46,6 +46,9 @@
       <button class='btn btn-primary' (click)='dbBracket()'>
         Use the Database
       </button>
+      <button class='btn btn-primary' (click)='testGetTeams()'>
+       Get teams from db
+      </button>
     </div>
   </div>
 </div>
