Added cellComponent funtionality

--- a/src/client/app/cell/cell.component.html
+++ b/src/client/app/cell/cell.component.html
@@ -1,4 +1,5 @@
 
 <div [title] = "position" (click) = "onClick()">
-  <span *ngIf="class == 'n' || class == 'u'">Team: <b>{{ team.name }}</b></span>
+  <span *ngIf="class == 'n' || class == 'u'">Team:
+<input type='text' [(ngModel)]='team.name' /></span>
 </div>
