--- a/src/client/app/brackets/brackets.component.html
+++ b/src/client/app/brackets/brackets.component.html
@@ -35,7 +35,7 @@
   <div class="row">
     <div class='col-sm'><strong>Teams:</strong></div>
     <div class="col-sm">
-      <input type='text' [(ngModel)]='teamCount' />
+      <input placeholder="How many teams? eg. 8" type='text' [(ngModel)]='teamCount' />
     </div>
     <div class="col-sm">
       <button class='btn btn-primary' (click)='createBracket(teamCount)'>
@@ -50,6 +50,10 @@
   </div>
 </div>
 
+<div *ngIf="teamClickedAlert">
+  <p>{{ teamClickedAlert }} </p>
+</div>
+
 <div *ngIf='bracket'>
   <h2>Bracket</h2>
   <p> </p>
@@ -58,11 +62,16 @@
     <tbody>
       <!-- <tr *ngFor="let row of bracket.tableData; let y = index">
         <td *ngFor="let cell of row; let x = index" [ngClass]="cell.class">
-          <span *ngIf="cell.class == 'n' || cell.class == 'u'">Team: <b>{{cell.teamName}}</b></span>
+          <span *ngIf="cell.class == 'n' || cell.class == 'u'">Team: <b>{{cell.team}}</b></span>
         </td> -->
       <tr *ngFor="let row of bracket.tableData; let y = index">
         <td *ngFor="let cell of row; let x = index" [ngClass]="cell.class">
-          <span *ngIf="cell.class == 'n' || cell.class == 'u'">Team: <b>{{ cell.teamName }}</b></span>
+          <!--<span *ngIf="cell.class == 'n' || cell.class == 'u'">Team: <b>{{ cell.team }}</b></span>-->
+          <vb-cell
+            [team] = "cell.team"
+            [class] = "cell.class"
+            (cellClicked) = "onTeamClicked($event)"
+          ></vb-cell>
         </td>
       </tr>
     </tbody>
