--- a/src/client/app/core/navbar/navbar.component.html
+++ b/src/client/app/core/navbar/navbar.component.html
@@ -1,4 +1,5 @@
 <nav>
   <a [routerLink]="['/']" [routerLinkActive]="['router-link-active']" [routerLinkActiveOptions]="{exact:true}">HOME</a>
+  <a [routerLink]="['/team-manager']" [routerLinkActive]="['router-link-active']" [routerLinkActiveOptions]="{exact:true}">TEAM MANAGER</a>
   <a [routerLink]="['/about']" [routerLinkActive]="['router-link-active']" [routerLinkActiveOptions]="{exact:true}">ABOUT</a>
 </nav>
