TeamManagement and TeamDetail and dbBracket() work -partially- from a json file.

--- a/src/client/app/cell/cell.component.html
+++ b/src/client/app/cell/cell.component.html
@@ -1,5 +1,5 @@
 
 <div [title] = "position" (click) = "onClick()">
   <span *ngIf="class == 'n' || class == 'u'">Team:
-<input type='text' [(ngModel)]='team.name' /></span>
+<input type='text' [(ngModel)]='team.TeamName' /></span>
 </div>
