Working (neatly coded) detail component

--- a/src/client/app/teamManager/team-detail.component.html
+++ b/src/client/app/teamManager/team-detail.component.html
@@ -28,19 +28,19 @@
           <div class='col-md-8'>{{ team.playerTwo }}</div>
         </div>
         <div class='row'>
-          <div class='col-md-4'>Seed:</div>
+          <div class='col-md-4'>Player 3:</div>
           <div class='col-md-8'>{{ team.playerThree }}</div>
         </div>
         <div class='row'>
-          <div class='col-md-4'>Seed:</div>
+          <div class='col-md-4'>Player 4:</div>
           <div class='col-md-8'>{{ team.playerFour }}</div>
         </div>
         <div class='row'>
-          <div class='col-md-4'>Seed:</div>
+          <div class='col-md-4'>Player 5:</div>
           <div class='col-md-8'>{{ team.playerFive }}</div>
         </div>
         <div class='row'>
-          <div class='col-md-4'>Seed:</div>
+          <div class='col-md-4'>Player 6:</div>
           <div class='col-md-8'>{{ team.playerSix }}</div>
         </div>
         <!--<div class='row'>-->
