Added team data and better CSS.

--- a/src/client/app/home/home.component.html
+++ b/src/client/app/home/home.component.html
@@ -1,10 +1,12 @@
-<div style="text-align:center" class="container">
+<div style="text-align:center; padding: 10px" class="container">
   <div class="row">
     <div class="col-sm">
       <h1>
         Welcome to {{ title }}!
       </h1>
     </div>
+  </div>
+  <div class="row">
     <div class="col-sm">
       <img width="100" alt="LIV Volleyball Logo" src="../../assets/favicon/favicon.ico">
     </div>
