--- a/src/client/app/brackets/brackets.component.html
+++ b/src/client/app/brackets/brackets.component.html
@@ -32,25 +32,22 @@
   </tr>
 </table> -->
 <div class="container">
-  <div class="row">
-    <div class='col-sm'><strong>Teams:</strong></div>
-    <div class="col-sm">
-      <input placeholder="How many teams? eg. 8" type='text' [(ngModel)]='teamCount' />
-    </div>
-    <div class="col-sm">
-      <button class='btn btn-primary' (click)='createBracket(teamCount)'>
+  <div class="col p-3">
+    <div class="row"><strong>Tournament size:</strong></div>
+    <div class="row">
+      <input placeholder="...number of teams" type='text' [(ngModel)]='teamCount'/>
+      <button class='btn btn-primary ml-3' (click)='createBracket(teamCount)'>
         Create Bracket
       </button>
     </div>
-    <div class="col-sm">
-      <button class='btn btn-primary' (click)='dbBracket()'>
-        Use the Database
-      </button>
-      <button class='btn btn-primary' (click)='testGetTeams()'>
-       Get teams from db
-      </button>
-    </div>
   </div>
+
+  <div class="container">
+    <button class='btn btn-primary' (click)='dbBracket()'>
+      Get teams from DB
+    </button>
+  </div>
+
 </div>
 
 <div *ngIf="teamClickedAlert">
@@ -59,24 +56,24 @@
 
 <div *ngIf='bracket'>
   <h2>Bracket</h2>
-  <p> </p>
+  <p></p>
   <hr style="border:1px grey">
   <table class='table'>
     <tbody>
-      <!-- <tr *ngFor="let row of bracket.tableData; let y = index">
-        <td *ngFor="let cell of row; let x = index" [ngClass]="cell.class">
-          <span *ngIf="cell.class == 'n' || cell.class == 'u'">Team: <b>{{cell.teamName}}</b></span>
-        </td> -->
-      <tr *ngFor="let row of bracket.tableData; let y = index">
-        <td *ngFor="let cell of row; let x = index" [ngClass]="cell.class">
-          <!--<span *ngIf="cell.class == 'n' || cell.class == 'u'">Team: <b>{{ cell.team }}</b></span>-->
-          <vb-cell
-            [team] = "cell.team"
-            [class] = "cell.class"
-            (cellClicked) = "onTeamClicked($event)"
-          ></vb-cell>
-        </td>
-      </tr>
+    <!-- <tr *ngFor="let row of bracket.tableData; let y = index">
+      <td *ngFor="let cell of row; let x = index" [ngClass]="cell.class">
+        <span *ngIf="cell.class == 'n' || cell.class == 'u'">Team: <b>{{cell.teamName}}</b></span>
+      </td> -->
+    <tr *ngFor="let row of bracket.tableData; let y = index">
+      <td *ngFor="let cell of row; let x = index" [ngClass]="cell.class">
+        <!--<span *ngIf="cell.class == 'n' || cell.class == 'u'">Team: <b>{{ cell.team }}</b></span>-->
+        <vb-cell
+          [team]="cell.team"
+          [class]="cell.class"
+          (cellClicked)="onTeamClicked($event)"
+        ></vb-cell>
+      </td>
+    </tr>
     </tbody>
   </table>
 </div>
