--- a/src/client/app/teamManager/team-detail.component.html
+++ b/src/client/app/teamManager/team-detail.component.html
@@ -12,7 +12,7 @@
           <div class='col-md-8'>{{ team.TeamName }}</div>
         </div>
         <div class='row'>
-          <div class='col-md-4'>Code:</div>
+          <div class='col-md-4'>Team ID:</div>
           <div class='col-md-8'>{{ team.TeamsID }}</div>
         </div>
         <div class='row'>
