team.players is populated from the database

--- a/src/client/app/teamManager/team-detail.component.html
+++ b/src/client/app/teamManager/team-detail.component.html
@@ -23,25 +23,10 @@
           <div class='col-md-4'>Captain:</div>
           <div class='col-md-8'>{{ team.captian }}</div>
         </div>
-        <div class='row'>
-          <div class='col-md-4'>Player 2:</div>
-          <div class='col-md-8'>{{ team.playerTwo }}</div>
-        </div>
-        <div class='row'>
-          <div class='col-md-4'>Player 3:</div>
-          <div class='col-md-8'>{{ team.playerThree }}</div>
-        </div>
-        <div class='row'>
-          <div class='col-md-4'>Player 4:</div>
-          <div class='col-md-8'>{{ team.playerFour }}</div>
-        </div>
-        <div class='row'>
-          <div class='col-md-4'>Player 5:</div>
-          <div class='col-md-8'>{{ team.playerFive }}</div>
-        </div>
-        <div class='row'>
-          <div class='col-md-4'>Player 6:</div>
-          <div class='col-md-8'>{{ team.playerSix }}</div>
+        <div class='row' *ngFor="let player of team.players">
+          <div class='col-md-4' *ngIf="team.players.indexOf(player) == 0">Captain:</div>
+          <div class='col-md-4' *ngIf="team.players.indexOf(player) != 0">Player {{ team.players.indexOf(player) + 1 }}:</div>
+          <div class='col-md-8'>{{ player }}</div>
         </div>
         <!--<div class='row'>-->
           <!--<div class='col-md-4'>Availability:</div>-->
