Client Side Services

--- a/src/client/app/brackets/brackets.component.html
+++ b/src/client/app/brackets/brackets.component.html
@@ -43,8 +43,14 @@
   </div>
 
   <div class="container">
-    <button class='btn btn-primary' (click)='dbBracket()'>
+    <button class='btn btn-primary' (click)='createMysqlBracket()'>
       Get teams from DB
+    </button>
+  </div>
+  <br/>
+  <div class="container">
+    <button class='btn btn-primary' (click)='saveTeamTest()'>
+      Save a Sample "Santa's Sleigh" Team
     </button>
   </div>
 
