Can add to the DB (Santa's Sleigh Test)

--- a/src/client/app/brackets/brackets.component.html
+++ b/src/client/app/brackets/brackets.component.html
@@ -49,6 +49,12 @@
   </div>
   <br/>
   <div class="container">
+    <button class='btn btn-primary' (click)='createJsonBracket()'>
+      Get teams from Json File
+    </button>
+  </div>
+  <br/>
+  <div class="container">
     <button class='btn btn-primary' (click)='saveTeamTest()'>
       Save a Sample "Santa's Sleigh" Team
     </button>
