Can Save a Team

--- a/src/client/app/teamManager/team-manager.component.html
+++ b/src/client/app/teamManager/team-manager.component.html
@@ -54,7 +54,11 @@
         </tbody>
       </table>
     </div>
-
+  </div>
+  <div class='card-footer'>
+    <button class='btn btn-outline-primary' (click)='newTeam()'>
+      Add Team
+    </button>
   </div>
 </div>
 
