--- a/src/client/app/teamManager/team-detail.component.html
+++ b/src/client/app/teamManager/team-detail.component.html
@@ -9,24 +9,20 @@
       <div class='col-md-8'>
         <div class='row'>
           <div class='col-md-4'>Name:</div>
-          <div class='col-md-8'>{{ team.TeamName }}</div>
+          <div class='col-md-8'><input type='text' [(ngModel)]='team.TeamName' /></div>
         </div>
         <div class='row'>
           <div class='col-md-4'>Team ID:</div>
-          <div class='col-md-8'>{{ team.TeamsID }}</div>
+          <div class='col-md-8'><input type='text' [(ngModel)]='team.TeamsID' /></div>
         </div>
         <div class='row'>
           <div class='col-md-4'>Seed:</div>
-          <div class='col-md-8'>{{ team.Seed }}</div>
+          <div class='col-md-8'><input type='text' [(ngModel)]='team.Seed' /></div>
         </div>
-        <div class='row'>
-          <div class='col-md-4'>Captain:</div>
-          <div class='col-md-8'>{{ team.captian }}</div>
-        </div>
-        <div class='row' *ngFor="let player of team.players">
+        <div class='row' *ngFor="let player of team.players; let i = index; trackBy: trackByIndex;">
           <div class='col-md-4' *ngIf="team.players.indexOf(player) == 0">Captain:</div>
           <div class='col-md-4' *ngIf="team.players.indexOf(player) != 0">Player {{ team.players.indexOf(player) + 1 }}:</div>
-          <div class='col-md-8'>{{ player }}</div>
+          <div class='col-md-8'><input type='text' [(ngModel)]= team.players[i] placeholder="player"/></div>
         </div>
         <!--<div class='row'>-->
           <!--<div class='col-md-4'>Availability:</div>-->
@@ -56,10 +52,11 @@
   </div>
 
   <div class='card-footer'>
-    <button class='btn btn-outline-secondary'
-            (click)='onBack()'
-            style='width:80px'>
+    <button class='btn btn-outline-secondary' (click)='onBack()'>
       <i class='fa fa-chevron-left'></i> Back
+    </button>
+    <button class='btn btn-outline-secondary' (click)='saveTeam()'>
+      <i class='fa fa-chevron-left'></i> Save Team
     </button>
   </div>
 </div>
