--- a/src/client/app/teamManager/team-detail.component.html
+++ b/src/client/app/teamManager/team-detail.component.html
@@ -8,15 +8,16 @@
     <div class='row'>
       <div class='col-md-8'>
         <div class='row'>
-          <div class='col-md-4'>Name:</div>
+          <div class='col-md-4'>Team ID:</div>
+          <div class='col-md-8' *ngIf="team.TeamsID">{{ team.TeamsID }}</div>
+          <div class='col-md-8' *ngIf="!team.TeamsID">...created by the Database</div>
+        </div>
+        <div class='row'>
+          <div class='col-md-4'>Name: (Must Be Unique)</div>
           <div class='col-md-8'><input type='text' [(ngModel)]='team.TeamName' /></div>
         </div>
         <div class='row'>
-          <div class='col-md-4'>Team ID:</div>
-          <div class='col-md-8'><input type='text' [(ngModel)]='team.TeamsID' /></div>
-        </div>
-        <div class='row'>
-          <div class='col-md-4'>Seed:</div>
+          <div class='col-md-4'>Seed: (Must Be Unique)</div>
           <div class='col-md-8'><input type='text' [(ngModel)]='team.Seed' /></div>
         </div>
         <div class='row' *ngFor="let player of team.players; let i = index; trackBy: trackByIndex;">
@@ -55,8 +56,11 @@
     <button class='btn btn-outline-secondary' (click)='onBack()'>
       <i class='fa fa-chevron-left'></i> Back
     </button>
-    <button class='btn btn-outline-secondary' (click)='saveTeam()'>
-      <i class='fa fa-chevron-left'></i> Save Team
+    <button class='btn btn-primary' (click)='saveTeam()'>
+      <i class='fa fa-chevron-left'></i> Save As New Team
+    </button>
+    <button class='btn btn-outline-primary' (click)='updateTeam()' *ngIf="team.TeamsID != undefined">
+      <i class='fa fa-chevron-left'></i> Update Team
     </button>
   </div>
 </div>
