--- a/src/client/app/brackets/brackets.component.html
+++ b/src/client/app/brackets/brackets.component.html
@@ -36,7 +36,7 @@
     <div class="row"><strong>Tournament size:</strong></div>
     <div class="row">
       <input placeholder="...number of teams" type='text' [(ngModel)]='teamCount'/>
-      <button class='btn btn-primary ml-3' (click)='createBracket(teamCount)'>
+      <button class='btn btn-primary ml-3' (click)='createUIBracket(teamCount)'>
         Create Bracket
       </button>
     </div>
