--- a/src/client/app/brackets/cell/cell.component.html
+++ b/src/client/app/brackets/cell/cell.component.html
@@ -1,5 +1,16 @@
 
 <div [title] = "position" (click) = "onClick()">
-  <span *ngIf="class == 'n' || class == 'u'">Team:
-<input type='text' [(ngModel)]='team.TeamName' /></span>
+  <!--<span *ngIf="class == 'n' || class == 'u'">Team:-->
+<!--<input type='text' /></span>-->
+  <div class="input-group mb-3" *ngIf="class == 'n' || class == 'u'">
+    <div class="input-group-prepend">
+      <label class="input-group-text" for="inputGroupSelect01">{{ team.Seed }}</label>
+    </div>
+    <select class="custom-select" id="inputGroupSelect01">
+      <option value="" selected="selected">{{ team.TeamName }}</option>
+      <hr>
+      <option *ngFor="let t of this.teamChoices" [ngValue]="t.TeamName">{{ t.TeamName }}</option>
+    </select>
+  </div>
+
 </div>
