--- a/src/client/app/brackets/brackets.component.html
+++ b/src/client/app/brackets/brackets.component.html
@@ -1,92 +1,62 @@
-<!-- <h2>HTML Table</h2>
-<table>
-  <tr>
-    <td class="n">Company</td>
-    <td></td>
-    <td></td>
-  </tr>
-  <tr>
-    <td class='u'>Alfreds Futterkiste</td>
-    <td class='corner'></td>
-    <td></td>
-  </tr>
-  <tr>
-    <td class='blank'></td>
-    <td class='blank'></td>
-    <td class='n'>Mexico</td>
-  </tr>
-  <tr>
-    <td class='blank'></td>
-    <td class='blank'></td>
-    <td class='u'>Austria</td>
-  </tr>
-  <tr>
-    <td class='n'>Island Trading</td>
-    <td class='right'></td>
-    <td class='blank'></td>
-  </tr>
-  <tr>
-    <td class='u'>Laughing Bacchus Winecellars</td>
-    <td class='top'></td>
-    <td class='blank'></td>
-  </tr>
-</table> -->
 <div class="container">
-  <div class="col p-3">
-    <div class="row"><strong>Tournament size:</strong></div>
-    <div class="row">
-      <input placeholder="...number of teams" type='text' [(ngModel)]='teamCount'/>
-      <button class='btn btn-primary ml-3' (click)='createUIBracket(teamCount)'>
-        Create Bracket
-      </button>
-    </div>
-  </div>
-
-  <div class="container">
-    <button class='btn btn-primary' (click)='createMysqlBracket()'>
-      Get teams from DB
+  <div class="row">
+    <button class='btn btn-primary ml-3' (click)='createUIBracket(teamCount)'>
+      <!--<span *ngIf="bShowSpinner1" class="spinner-border spinner-border-sm" role="status" aria-hidden="false"></span>-->
+      Create Empty Bracket
     </button>
+    <input placeholder="...number of teams" type='text' [(ngModel)]='teamCount'/>
   </div>
-  <br/>
-  <div class="container">
-    <button class='btn btn-primary' (click)='createJsonBracket()'>
-      Get teams from Json File
-    </button>
-  </div>
-  <br/>
-  <div class="container">
-    <button class='btn btn-primary' (click)='saveTeamTest()'>
-      Save a Sample "Santa's Sleigh" Team
-    </button>
-  </div>
-
 </div>
 
-<div *ngIf="teamClickedAlert">
-  <p>{{ teamClickedAlert }} </p>
+<div class="container">
+  <button class='btn btn-primary mt-1' (click)='createMysqlBracket()'>
+    <span *ngIf="bShowSpinner2" class="spinner-border spinner-border-sm" role="status" aria-hidden="false"></span>
+    Create Bracket with DB Teams
+  </button>
+</div>
+<!--<br/>-->
+<!--<div class="container">-->
+<!--<button class='btn btn-primary' (click)='createJsonBracket()'>-->
+<!--Get teams from Json File-->
+<!--</button>-->
+<!--</div>-->
+<!--<br/>-->
+<!--<div class="container">-->
+<!--<button class='btn btn-primary' (click)='saveTeamTest()'>-->
+<!--Save a Sample "Santa's Sleigh" Team-->
+<!--</button>-->
+<!--</div>-->
+
+<div class="card w-100 mt-4" *ngIf="bracket">
+  <div class="card-header bg-secondary text-light text-center">
+    <h3><strong>Bracket</strong></h3>
+  </div>
+  <!--<div class="alert alert-warning alert-dismissible fade show" role="alert" *ngIf="teamClickedAlert">-->
+    <!--{{ teamClickedAlert }}-->
+    <!--<button type="button" class="close" data-dismiss="alert" aria-label="Close">-->
+      <!--<span aria-hidden="true">&times;</span>-->
+    <!--</button>-->
+  <!--</div>-->
+  <div class="card-body">
+    <table class='table' *ngIf="tableData.table">
+      <tbody>
+      <!-- <tr *ngFor="let row of bracket.tableData; let y = index">
+        <td *ngFor="let cell of row; let x = index" [ngClass]="cell.class">
+          <span *ngIf="cell.class == 'n' || cell.class == 'u'">Team: <b>{{cell.teamName}}</b></span>
+        </td> -->
+      <tr *ngFor="let row of tableData.table; let y = index">
+        <td *ngFor="let cell of row; let x = index" [ngClass]="cell.class + ' p-0'">
+          <!--<span *ngIf="cell.class == 'n' || cell.class == 'u'">Team: <b>{{ cell.team }}</b></span>-->
+          <vb-cell
+            [team]="cell.team"
+            [teamChoices]="teams"
+            [tdClass]="cell.class"
+            (cellClicked)="onTeamClicked($event)"
+          ></vb-cell>
+        </td>
+      </tr>
+      </tbody>
+    </table>
+  </div>
 </div>
 
-<div *ngIf='bracket'>
-  <h2>Bracket</h2>
-  <p></p>
-  <hr style="border:1px grey">
-  <table class='table' *ngIf="tableData.table">
-    <tbody>
-    <!-- <tr *ngFor="let row of bracket.tableData; let y = index">
-      <td *ngFor="let cell of row; let x = index" [ngClass]="cell.class">
-        <span *ngIf="cell.class == 'n' || cell.class == 'u'">Team: <b>{{cell.teamName}}</b></span>
-      </td> -->
-    <tr *ngFor="let row of tableData.table; let y = index">
-      <td *ngFor="let cell of row; let x = index" [ngClass]="cell.class">
-        <!--<span *ngIf="cell.class == 'n' || cell.class == 'u'">Team: <b>{{ cell.team }}</b></span>-->
-        <vb-cell
-          [team]="cell.team"
-          [teamChoices]="teams"
-          [class]="cell.class"
-          (cellClicked)="onTeamClicked($event)"
-        ></vb-cell>
-      </td>
-    </tr>
-    </tbody>
-  </table>
-</div>
