--- a/src/client/app/brackets/brackets.component.html
+++ b/src/client/app/brackets/brackets.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row">
     <button class='btn btn-primary ml-3' (click)='createUIBracket(teamCount)'>
-      <!--<span *ngIf="bShowSpinner1" class="spinner-border spinner-border-sm" role="status" aria-hidden="false"></span>-->
+      <span *ngIf="bShowSpinner1" class="spinner-border spinner-border-sm" role="status" aria-hidden="false"></span>
       Create Empty Bracket
     </button>
     <input placeholder="...number of teams" type='text' [(ngModel)]='teamCount'/>
