Changed the round corners on the button so it doesn't look odd

--- a/src/client/app/brackets/brackets.component.css
+++ b/src/client/app/brackets/brackets.component.css
@@ -39,3 +39,8 @@ select {
     height: 33px;
     width: 200px
 }
+
+.squareRightCorners {
+  border-bottom-right-radius: 0;
+  border-top-right-radius: 0;
+}
