Added an active enter key for the number of teams

--- a/src/client/app/brackets/brackets.component.html
+++ b/src/client/app/brackets/brackets.component.html
@@ -4,7 +4,8 @@
       <span *ngIf="bShowSpinner1" class="spinner-border spinner-border-sm" role="status" aria-hidden="false"></span>
       Create Empty Bracket
     </button>
-    <input placeholder="...number of teams" type='text' [(ngModel)]='teamCount'/>
+    <input (keydown)="onKeydown($event, teamCount)"
+           placeholder="...number of teams" type='text' [(ngModel)]='teamCount'/>
   </div>
 </div>
 
