--- a/src/client/app/core/toolbar/toolbar.component.html
+++ b/src/client/app/core/toolbar/toolbar.component.html
@@ -1,2 +1,4 @@
-<h1>LIV Volleyball Bracket Generator</h1>
-<div class="more"></div>
+<div class="d-flex align-content-center bg-primary text-light px-3 pt-1 w-100">
+  <h3 class="font-weight-bold">LIV-Volleyball Bracket Generator</h3>
+  <span class="ml-auto"><i class="fas fa-ellipsis-v fa-1x"></i></span>
+</div>
