--- a/src/client/app/teamManager/team-detail.component.html
+++ b/src/client/app/teamManager/team-detail.component.html
@@ -54,7 +54,7 @@
 
   <div class='card-footer'>
     <button class='btn btn-outline-secondary' (click)='onBack()'>
-      &lt; Back
+      <i class="fas fa-angle-double-left"></i> Back
     </button>
     <button class='btn btn-primary' (click)='saveTeam()'>
       Save As New Team
